# Agentic-Chatbot

./: .env.example  .gitignore  Makefile  README.md  app.py  pyproject.toml  requirements-gradio.txt  requirements-prod.txt  requirements.txt
assets/: summary.txt
src/agentic_chatbot/: __init__.py  __main__.py
src/agentic_chatbot/adapters/: gemini_client.py  pushover.py  pypdf_reader.py
src/agentic_chatbot/config/: settings.py
src/agentic_chatbot/domain/: errors.py  models.py
src/agentic_chatbot/ports/: __init__.py  docs.py  llm.py  notify.py
src/agentic_chatbot/presentation/: __init__.py  gradio_app.py
src/agentic_chatbot/tools/: registry.py
src/agentic_chatbot/use_cases/: chat.py  record.py
