[project]
name = "agentic-chatbot"
version = "0.1.0"
description = "A clean architecture AI chatbot implementation"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.8",
    "pydantic-settings>=2.4",
    "google-generativeai>=0.7",
    "gradio>=4.0",
    "pypdf>=4.3",
    "requests>=2.32",
    "email-validator>=2.3.0",
]

[project.optional-dependencies]
dev = ["mypy>=1.10", "ruff>=0.6", "pytest>=8.0", "types-requests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = true

[project.scripts]
agentic-chatbot = "agentic_chatbot.__main__:main"

[tool.mypy]
python_version = "3.11"
warn_unused_ignores = true
warn_return_any = true
warn_unused_configs = true
strict_equality = true
disallow_any_generics = true
disallow_subclassing_any = true
no_implicit_optional = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_defs = true
disallow_untyped_calls = true

[tool.ruff]
line-length = 100
target-version = "py311"
lint.select = ["E","F","I","UP","B","SIM","PT","PL","RUF"]
lint.ignore = ["E501"]

[dependency-groups]
dev = [
    "ruff>=0.13.3",
    "types-requests>=2.32.4.20250913",
]
